project(UDP_Server)
add_executable(send src/test_sender.cc src/signal_handler.cc src/server.cc)
add_executable(forward src/test_forwarder.cc src/signal_handler.cc src/server.cc)
add_executable(receive src/test_receiver.cc src/signal_handler.cc src/server.cc)

if(${CMAKE_C_COMPILER_ID} STREQUAL "GNU")
    message(STATUS "Using GNU compiler, compiler ID ${CMAKE_C_COMPILER_ID}")
    set(CMAKE_C_FLAGS "-std=gnu11 -Wall -g -march=native -m64")
    set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -g -march=native -m64")
    set(MKL_LIBS -Wl,--no-as-needed -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread -lm -ldl)
else()
    set(CMAKE_CXX_STANDARD 17)
endif()
